# magicPicture

./: .gitignore  CMakeLists.txt  main.cpp  optional.h  task.txt  tests.cpp
.github/workflows/: check.yml  ubuntu.yml
